Update project links

--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
                         <div class="sides">
                             <img id="diss_image" src="images/VRStudyMain.png" alt="VR Study Screenshot">
                             <p id="diss_text">My final year university project: designing and creating a VR experience where the user performs a number of cooking tasks. During the tasks, the relationships between the physical and virtual worlds are manipulated to explore how visual behaviours impact the proprioception and immersion of users.</p>
-                            <p id="diss_text_hidden" class="hide_content"><br><br> This project was created in Unity with a Meta Quest 2 and involved extensive research on VR object manipulation and immersion in games and virtual reality. I really enjoyed working on this project, and it taught me some invaluable insights on how users interact with unfamiliar technology and how that effects the value they get from it.<br><br><a href="pdf/VRStudy.pdf">Read the paper!</a></p>
+                            <p id="diss_text_hidden" class="hide_content"><br><br> This project was created in Unity with a Meta Quest 2 and involved extensive research on VR object manipulation and immersion in games and virtual reality. I really enjoyed working on this project, and it taught me some invaluable insights on how users interact with unfamiliar technology and how that effects the value they get from it.<br><br><a href="pdf/VRStudy.pdf" target="_blank">Read the paper!</a></p>
                         </div>
                       </li>
                       <li id="robot" onclick="openModal(this)">
@@ -310,7 +310,7 @@
                         <div class="sides">
                             <img id="robot_image" src="images/Robotics.png" alt="Robotics localisation">
                             <p id="robot_text">A ROS application to autonomously control a turtlebot. This software performs all tasks from mapping and localisation with SLAM to computer vision for object detection and marking. A pathfinding algorithm using frontiers was also used to traverse unseen locations whilst avoiding objects to run in any environment.</p>
-                            <p id="robot_text_hidden" class="hide_content"><br><br> This project is built using python nodes to asynchronously handle the multiple data sources and decision making for a smooth and continuous progression. The nodes are also created to give a combination of performance and accurancy so it can adapt quickly to moving objects in the environment and advance quickly whilst still accurately mapping and identifying the objects it's looking for.<br><br><a href="pdf/RoboticsReport.pdf">Technical report of this project</a></p>  
+                            <p id="robot_text_hidden" class="hide_content"><br><br> This project is built using python nodes to asynchronously handle the multiple data sources and decision making for a smooth and continuous progression. The nodes are also created to give a combination of performance and accurancy so it can adapt quickly to moving objects in the environment and advance quickly whilst still accurately mapping and identifying the objects it's looking for.<br><br><a href="pdf/RoboticsReport.pdf" target="_blank">Technical report of this project</a></p>  
                         </div>
                       </li>
                       <li id="optimisation" onclick="openModal(this)">
@@ -318,7 +318,7 @@
                         <div class="sides">
                             <img id="optimisation_image" src="images/CarOperationsResearch.png" alt="Car rental operations research visualistaion">
                             <p id="optimisation_text">An algebraic linear optimisation model for maximising the profit of a car rental company with multiple locations and hundred of decision variables and constraints. This required processing of written information and translating it into mathematical model while still retaining the readibility of the model for comprehension by non-technical stakeholders.</p>
-                            <p id="optimisation_text_hidden" class="hide_content"><br><br>This model was developed based on the Car Rental 1 & 2 problems from H. Paul Williams' <a href="https://www.wiley.com/en-ca/Model+Building+in+Mathematical+Programming%2C+5th+Edition-p-9781118506172">Model Buiding in Mathematical Programming</a>.</p>
+                            <p id="optimisation_text_hidden" class="hide_content"><br><br>This model was developed based on the Car Rental 1 & 2 problems from H. Paul Williams' <a href="https://www.wiley.com/en-ca/Model+Building+in+Mathematical+Programming%2C+5th+Edition-p-9781118506172" target="_blank">Model Buiding in Mathematical Programming</a>.</p>
                         </div>  
                       </li>
                       <li id="grp" onclick="openModal(this)">
@@ -334,7 +334,7 @@
                         <div class="sides">
                             <img id="predprey_image" src="images/PredatorPrey.png" alt="">
                             <p id="predprey_text">A simulation project to model the population fluctuation of predator and prey. This model was developed in python, making use of the tkinter library to model the movement of the creatures. For this I developed a number of different AI agents with varing communication strategies to explore the impact on the emergent behaviours.</p>
-                            <p id="predprey_text_hidden" class="hide_content"><br><br>A state machine architecture was developed for each individual agent, with predators and agents each having specific movement and vision characteristics to make them as accurate as models to real life creatures as possible. I was able to then plot the findings of the different communication strategies on the emergent behaviours using Pandas to reason about their success as a model for the relationship.<br><br><a href="">Check it out!</a></p>
+                            <p id="predprey_text_hidden" class="hide_content"><br><br>A state machine architecture was developed for each individual agent, with predators and agents each having specific movement and vision characteristics to make them as accurate as models to real life creatures as possible. I was able to then plot the findings of the different communication strategies on the emergent behaviours using Pandas to reason about their success as a model for the relationship.<br><br><a href="https://github.com/JordanEdward02/Predator-Prey/tree/main" target="_blank">Check it out!</a></p>
                         </div>
                       </li>
                       <li id="website" onclick="openModal(this)">
