Fix typo on homepage title

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="content">
             <div id="about_page" class="content_page">
                 <div class="content_header">
-                    <div class="bio"> Software Developer @ Oleeo | MSc Computer Science 
+                    <div class="bio"> Software Developer @ Oleeo | MSci Computer Science 
                         <div id="location"><span class="material-symbols-outlined">location_city</span>Manchester, UK </div>
                     </div>
                     <div id="photo-section">
