Add race_prediction project to portfolio

--- a/index.html
+++ b/index.html
@@ -297,6 +297,14 @@
                 </section>
                 <section class="project-list">
                     <ul>
+                        <li id="race_prediction" onclick="openModal(this)">
+                        <h2 id="race_prediction_header">**WIP** - F1 Race predictor</h2>
+                        <div class="sides">
+                            <img id="race_prediction_image" src="images/under-construction.jpg" alt="Coming Soon">
+                            <p id="race_prediction_text">An evaluation of data forcasting models for predicting F1 race results. This personal project is just an opportunity to learn and test data forcasting models and techniques and later play with some data analysis and visualisation techniques</p>
+                            <p id="race_prediction_text_hidden" class="hide_content"><br><br><a href="https://github.com/JordanEdward02/race_prediction">Check out the repo!</a> </p>
+                        </div>
+                      </li>
                       <li id="diss" onclick="openModal(this)">
                         <h2 id="diss_header">Evaluating visual feedback techniques and object behaviours in VR</h2>
                         <div class="sides">
