--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
                         <div class="sides">
                             <img id="race_prediction_image" src="images/under-construction.jpg" alt="Coming Soon">
                             <p id="race_prediction_text">An evaluation of data forcasting models for predicting F1 race results. This personal project is just an opportunity to learn and test data forcasting models and techniques and later play with some data analysis and visualisation techniques</p>
-                            <p id="race_prediction_text_hidden" class="hide_content"><br><br><a href="https://github.com/JordanEdward02/race_prediction">Check out the repo!</a> </p>
+                            <p id="race_prediction_text_hidden" class="hide_content"><br><br><a href="https://github.com/JordanEdward02/race_prediction" target="_blank">Check out the repo!</a> </p>
                         </div>
                       </li>
                       <li id="diss" onclick="openModal(this)">
