Update text in about me page

--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
                 </div>
                 <div>Hi! I'm Jordan, a software developer driven by the ubiquitous nature of technology in connecting people for learning, innovation and entertainment.</div>
                 <div><br>I currently work at Oleeo, where I develop highly configurable and customizable hiring tools for over 100 clients, both internal and external. My work here is currently very broad, 
-                    with multiple technologies such as Angular and JS for frontend changes to Perl for the backend and APIs. I am also involved in managing data stored in our relational SQL databases using mySQL, 
-                    where I often have to write complex queries to join multiple tables.</div>
+                    with technologies such as Angular and JS for frontend changes to Perl for the backend and APIs. I am also involved in managing data stored in our databases and creating technical 
+                    reports. I'm also involved in some security changes such as managing access control and CSP to help protect personal user information.</div>
                 <div><br></div>
             </div>
             <div id="education_page" class="content_page hide_content">
