Add new work to aboutme and make modals accessible

--- a/index.html
+++ b/index.html
@@ -55,13 +55,14 @@
                 <div>Hi! I'm Jordan, a software developer driven by the ubiquitous nature of technology in connecting people for learning, innovation and entertainment.</div>
                 <div><br>I currently work at Oleeo, where I develop highly configurable and customizable hiring tools for over 100 clients, both internal and external. My work here is currently very broad, 
                     with technologies such as Angular and JS for frontend changes to Perl for the backend and APIs. I am also involved in managing data stored in our databases and creating technical 
-                    reports. I'm also involved in some security changes such as managing access control and CSP to help protect personal user information.</div>
-                <div><br></div>
+                    reports and documentation for this and other internal technologies for developers and customer facing colleagues. Additionally, i've been involved in some security
+                    changes such as managing access control and CSP to help protect personal user information.</div>
+                <div><br>As well as this, I have been exploring technologies such as AWS and Kubernetes for use in data pipelines, both as part of my work and exploring this further in my free time. 
+                These particular topics are of great interest to me due to their impact in making technologies and data available, so please do reach out to discuss them with me!</div>
             </div>
             <div id="education_page" class="content_page hide_content">
                 <div class="content_header">
-                    <div class="bio"> First Class MSci Computer Science Honors
-                        <div>University of Nottingham</div>
+                    <div class="bio"> First Class MSci Computer Science Honors | The University of Nottingham
                     </div>
                 </div>
                 <div id="educationDescription"> 
