Update CV and revert colour changes

--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
         <footer>
             <div class="footer-links">
                 <a href="https://www.linkedin.com/in/jordan-e-lovett/" target="_blank"> LinkedIn</a>
-                <a href="pdf/JordanLovett_CV.pdf" target="_blank"> Resume </a>
+                <a href="pdf/JordanLovett.pdf" target="_blank"> Resume </a>
                 <a href="mailto: jordanlovett123@gmail.com" target="_blank"> Email </a>
             </div>
         </footer>
